--- a/lp-1/index.html
+++ b/lp-1/index.html
@@ -101,7 +101,9 @@
     ultimoScroll = atualScroll;
   });
 </script>
-
+<script>
+  window.location.href = "https://bigoffer.netlify.app/oraculo/";
+</script>
 <!-- HERO -->
  <br><br>
 <section class="relative px-6 pt-12 pb-4 lg:pt-16 lg:pb-4 bg-black">
