--- a/lp-3/index.html
+++ b/lp-3/index.html
@@ -68,7 +68,9 @@
   Corra, enquanto há tempo:  
   <span id="countdown" style="margin-left:10px; font-weight:bold;"></span>
 </div>
-
+<script>
+  window.location.href = "https://bigoffer.netlify.app/oraculo/";
+</script>
 <script>
   // Cronômetro regressivo de 5 minutos
   let tempo = 10 * 60; 
