--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -367,6 +367,7 @@ body {
 }
 </style>
 
+<script>
 document.getElementById("beginPortal").addEventListener("click", () => {
   // Fecha o aviso inicial
   document.getElementById("startOverlay").style.display = "none";
@@ -388,6 +389,7 @@ document.getElementById("beginPortal").addEventListener("click", () => {
   bgMusic.play().catch(err => console.log("Autoplay bloqueado até interação:", err));
 });
 </script>
+
 
 
 
