--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -678,7 +678,7 @@ function showStageButtons() {
 
 // 🔊 Som de clique
 const clickSound = new Audio("https://cdn.pixabay.com/download/audio/2025/08/03/audio_1df12d5efc.mp3?filename=computer-mouse-click-02-383961.mp3");
-clickSound.volume = 0.5; // volume moderado
+clickSound.volume = 0.7; // volume moderado IMPROTANTE!
 
 // Tocar o som sempre que qualquer botão for clicado
 document.addEventListener("click", (e) => {
