--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -880,6 +880,8 @@ if (currentStage === 0) {
 
 
 
+
+
 function showStageButtons() {
   const stage = finalStages[currentStage];
   const container = document.querySelector(".quiz-container");
@@ -903,53 +905,51 @@ function showStageButtons() {
     if (btnData.action === "continuar") {
       btn.onclick = () => {
         currentStage++;
-        saveProgress();
+        saveProgress(); // ✅ continua salvando o progresso
         if (currentStage < finalStages.length) {
           playFinalStage();
-        } 
-        else {
-  // 🔗 Recupera UTMs da URL atual
-  const params = new URLSearchParams(window.location.search);
-  const utmString = params.toString();
-  let finalLink = "https://sun.eduzz.com/E0D6P4V691";
+        } else {
+          // 🔗 Redireciona para o checkout COM UTMs (sem resetar)
+          const params = new URLSearchParams(window.location.search);
+          const utmString = params.toString();
+          let finalLink = "https://sun.eduzz.com/E0D6P4V691";
 
-  if (utmString) {
-    const separator = finalLink.includes('?') ? '&' : '?';
-    finalLink = `${finalLink}${separator}${utmString}`;
-  }
+          if (utmString) {
+            const separator = finalLink.includes('?') ? '&' : '?';
+            finalLink = `${finalLink}${separator}${utmString}`;
+          }
 
-  resetProgress();
-  window.location.href = finalLink;
-}
+          // ❌ NÃO limpa o progresso
+          window.location.href = finalLink;
+        }
       };
     }
 
-// 🔹 Se for o botão final (link)
-else if (btnData.action === "link") {
-  btn.onclick = () => {
-    // 🎆 Efeito de fogos
-    launchFireworks();
-    const sound = new Audio("https://cdn.pixabay.com/download/audio/2022/03/15/audio_e8b2fa25cf.mp3?filename=goodresult-82807.mp3");
-sound.volume = 0.4;
-sound.play();
+    // 🔹 Se for o botão final (link)
+    else if (btnData.action === "link") {
+      btn.onclick = () => {
+        // 🎆 Efeito de fogos + som
+        launchFireworks();
+        const sound = new Audio("https://cdn.pixabay.com/download/audio/2022/03/15/audio_e8b2fa25cf.mp3?filename=goodresult-82807.mp3");
+        sound.volume = 0.4;
+        sound.play();
 
-    // 🔗 Recupera UTMs da URL atual
-    const params = new URLSearchParams(window.location.search);
-    const utmString = params.toString();
-    let finalLink = btnData.link;
+        // 🔗 Mantém UTMs
+        const params = new URLSearchParams(window.location.search);
+        const utmString = params.toString();
+        let finalLink = btnData.link;
 
-    if (utmString) {
-      const separator = finalLink.includes('?') ? '&' : '?';
-      finalLink = `${finalLink}${separator}${utmString}`;
+        if (utmString) {
+          const separator = finalLink.includes('?') ? '&' : '?';
+          finalLink = `${finalLink}${separator}${utmString}`;
+        }
+
+        // ✅ NÃO limpa o progresso — mantém salvo no localStorage
+        setTimeout(() => {
+          window.location.href = finalLink;
+        }, 1000);
+      };
     }
-
-    // 🧹 Limpa progresso e redireciona após o efeito
-    setTimeout(() => {
-      resetProgress();
-      window.location.href = finalLink;
-    }, 1800);
-  };
-}
 
     container.appendChild(btn);
   });
