--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -321,7 +321,7 @@ body {
 <div id="startOverlay" class="overlay">
   <div class="popup-glass">
     <h2>⚠️ATENÇÃO</h2>
-    <p>Antes de continuar, <b>confirme que o som do seu celular está no volume máximo</b>.</p>
+    <p>Antes de continuar, <b>confirme que o SOM DO SEU CELULAR está no volume máximo</b>.</p>
     <button id="beginPortal" class="btn-universal">INICIAR</button>
   </div>
 </div>
