--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -321,8 +321,8 @@ body {
 <div id="startOverlay" class="overlay">
   <div class="popup-glass">
     <h2>⚠️ATENÇÃO</h2>
-    <p>Antes de continuar, coloque o <b>VOLUME NO MÁXIMO</b> 🔊 para ouvir tudo com clareza.</p>
-    <button id="beginPortal" class="btn-universal">INICIAR</button>
+    <p>Antes de continuar, coloque o <b>VOLUME NO MÁXIMO</b> para ouvir tudo com clareza.</p>
+    <button id="beginPortal" class="btn-universal">OUVIR 🔊</button>
   </div>
 </div>
 
