--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -435,7 +435,7 @@ document.getElementById("beginPortal").addEventListener("click", () => {
         audio: "https://static.wixstatic.com/mp3/7f5efc_5a19d15e56a742a6992b2a3f46597638.mp3",
         gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif"
       },
-      {
+     {
         text: "Eu nem chamaria de amigo...",
         options: ["Reciprocidade", "Autoridade", "Medo"],
         correct: 0,
@@ -444,14 +444,14 @@ document.getElementById("beginPortal").addEventListener("click", () => {
       },
       {
         text: "Me prova que sabe...",
-        options: ["Ira", "Raiva", "Recompensa"],
+        options: ["Medo de Perder", "Raiva", "Recompensa"],
         correct: 2,
         audio: "https://static.wixstatic.com/mp3/7f5efc_d4565de85cfe47e182eb158a74424204.mp3",
         gif: "https://static.wixstatic.com/media/7f5efc_356fcdf2e88344ea95e2f7d8e218c018~mv2.gif"
       },
       {
         text: "Te peguei não é mesmo?",
-        options: ["Medo", "Autonomia", "Chantagem"],
+        options: ["Antecipação", "Autonomia", "Chantagem"],
         correct: 1,
         audio: "https://static.wixstatic.com/mp3/7f5efc_42f722c97490452f9c83c23d29c49329.mp3",
         gif: "https://static.wixstatic.com/media/7f5efc_8e1f897492c6474d880adf2ad3182ac5~mv2.gif"
