--- a/oraculo/index.html
+++ b/oraculo/index.html
@@ -591,14 +591,24 @@ const finalStages = [
       { text: "Vou pensar", action: "continuar" }
     ]
   },
+  
   {
-    audio: "https://static.wixstatic.com/mp3/7f5efc_45087183048d4fa1a9586f0100342b08.mp3",
-    title: "Agora é com você... O portal está aberto!",
-    gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif",
-    buttons: [
-      { text: "ACESSAR O CÓDIGO DA PERSUASÃO", action: "link", link: "https://sun.eduzz.com/E0D6P4V691" }
-    ]
-  }
+  audio: "https://static.wixstatic.com/mp3/7f5efc_45087183048d4fa1a9586f0100342b08.mp3",
+  title: (() => {
+    const dias = ["domingo", "segunda-feira", "terça-feira", "quarta-feira", "quinta-feira", "sexta-feira", "sábado"];
+    const hoje = new Date();
+    const diaSemana = dias[hoje.getDay()];
+    const dia = hoje.getDate().toString().padStart(2, '0');
+    const mes = hoje.toLocaleString('pt-BR', { month: 'long' });
+    return `Agora é com você... O portal está aberto para garantir o Código da Persuasão com 70% de desconto!\n\nATENÇÃO: essa promoção ficará disponível somente hoje, ${diaSemana} ${dia} de ${mes}.`;
+  })(),
+  gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif",
+  buttons: [
+    { text: "GARANTIR AGORA!", action: "link", link: "https://sun.eduzz.com/E0D6P4V691" }
+  ]
+}
+  
+
 ];
 
 let currentStage = 0;
