--- a/oraculo-es/index.html
+++ b/oraculo-es/index.html
@@ -602,9 +602,9 @@ title: (() => {
   const mes = hoje.toLocaleString('pt-BR', { month: 'long' });
   return `Agora é com você... <br>
   <br>
-  O portal está aberto para garantir o Código da Persuasão com 70% de Desconto!<br>
+  O portal está aberto para garantir o Código da [P]ersuasão com 70% de Desconto!<br>
   <br>
-  <b>ATENÇÃO:</b> essa promoção ficará disponível somente hoje, ${diaSemana} ${dia} de ${mes}.`;
+  ⚠️<b>ATENÇÃO:</b> Essa promoção ficará disponível somente hoje, ${diaSemana} ${dia} de ${mes}.`;
 })(),
   gif: "https://static.wixstatic.com/media/7f5efc_a7bee9f2a76c46c4b3f33679c2bdc969~mv2.gif",
   buttons: [
@@ -958,7 +958,7 @@ function showStageButtons() {
 
         setTimeout(() => {
           window.location.href = finalLink;
-        }, 1000);
+        }, 500);
       };
     }
 
